--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -10,6 +10,14 @@
     "mongoose": "~3.6.13",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "morgan": "~1.6.1"    
+    "ejs" : "~0.8.5",   
+    "morgan": "~1.6.1",
+    "passport" : "~0.1.17",         
+    "passport-local" : "~0.1.6",
+    "bcrypt-nodejs" : "latest",
+    "connect-flash" : "~0.1.1",
+    "express-session": "~1.0.0",
+    "cookie-parser": "~1.0.0",
+    "serve-favicon": "~2.0.0"
   }
 }
