--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "connect-flash" : "~0.1.1",
     "express-session": "~1.0.0",
     "cookie-parser": "~1.0.0",
-    "serve-favicon": "~2.0.0"
+    "serve-favicon": "~2.0.0",
+    "express-ejs-layouts": "~2.1.0"
   }
 }
