--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
-    "mongoose": "~3.6.13",
+    "mongoose": "4.4.19",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "ejs" : "~0.8.5",   
+    "ejs": "~0.8.5",
     "morgan": "~1.6.1",
-    "passport" : "~0.1.17",         
-    "passport-local" : "~0.1.6",
-    "bcrypt-nodejs" : "latest",
-    "connect-flash" : "~0.1.1",
+    "passport": "~0.1.17",
+    "passport-local": "~0.1.6",
+    "bcrypt-nodejs": "latest",
+    "connect-flash": "~0.1.1",
     "express-session": "~1.0.0",
     "cookie-parser": "~1.0.0",
     "serve-favicon": "~2.0.0",
     "express-ejs-layouts": "~2.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.9.2"
   }
 }
