--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-session": "~1.0.0",
     "cookie-parser": "~1.0.0",
     "serve-favicon": "~2.0.0",
-    "express-ejs-layouts": "~2.1.0"
+    "express-ejs-layouts": "~2.1.0",
+    "twitter": "1.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
