--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "cookie-parser": "~1.0.0",
     "serve-favicon": "~2.0.0",
     "express-ejs-layouts": "~2.1.0",
-    "twitter": "1.3.0"
+    "twitter": "1.3.0",
+    "passport-twitter":"v1.0.4",
+    "passport-facebook": "v2.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
